--- a/src/CrabSeek.Connectors/CrabSeek.Connectors.csproj
+++ b/src/CrabSeek.Connectors/CrabSeek.Connectors.csproj
@@ -6,4 +6,23 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>CrabSeek.Connectors</PackageId>
+    <Authors>Benjlet</Authors>
+    <Company>Benjlet</Company>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/Benjlet/CrabSeek.Connectors</RepositoryUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>grid;tile;pathfinding;algorithms;csharp;</PackageTags>
+    <PackageProjectUrl>https://github.com/Benjlet/CrabSeek.Connectors</PackageProjectUrl>
+    <Description>Tile-grid generation for C# .NET.</Description>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
