--- a/src/CrabSeek.Connectors/CrabSeek.Connectors.csproj
+++ b/src/CrabSeek.Connectors/CrabSeek.Connectors.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup>
     <PackageId>CrabSeek.Connectors</PackageId>
+	<PackageVersion>1.0.1</PackageVersion>
     <Authors>Benjlet</Authors>
     <Company>Benjlet</Company>
     <RepositoryType>git</RepositoryType>
